--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,6 @@
+1.00.01
+- Created initial Zoyinc version of skin
+- Many thanks to original maintainers and creators
 3.4.32 (11-01-2022)
 - Allow different view types for PVR
 - Search for trailer and play trailer in window (video info)
