--- a/language/resource.language.ca_es/strings.po
+++ b/language/resource.language.ca_es/strings.po
@@ -138,7 +138,7 @@ msgid "Order"
 msgstr "Ordre"
 
 msgctxt "#31028"
-msgid "Amber Settings"
+msgid "Zoyinc Settings"
 msgstr "Configuració d'Amber"
 
 msgctxt "#31029"
