--- a/language/resource.language.de_de/strings.po
+++ b/language/resource.language.de_de/strings.po
@@ -138,7 +138,7 @@ msgid "Order"
 msgstr "Reihenfolge"
 
 msgctxt "#31028"
-msgid "Amber Settings"
+msgid "Zoyinc Settings"
 msgstr "Amber Einstellungen"
 
 msgctxt "#31029"
