--- a/language/resource.language.lv_lv/strings.po
+++ b/language/resource.language.lv_lv/strings.po
@@ -138,7 +138,7 @@ msgid "Order"
 msgstr "Kārtība"
 
 msgctxt "#31028"
-msgid "Amber Settings"
+msgid "Zoyinc Settings"
 msgstr ""
 
 msgctxt "#31029"
