--- a/language/resource.language.nl_nl/strings.po
+++ b/language/resource.language.nl_nl/strings.po
@@ -138,7 +138,7 @@ msgid "Order"
 msgstr "Volgorde"
 
 msgctxt "#31028"
-msgid "Amber Settings"
+msgid "Zoyinc Settings"
 msgstr "Amber-instellingen"
 
 msgctxt "#31029"
