--- a/language/resource.language.pt_br/strings.po
+++ b/language/resource.language.pt_br/strings.po
@@ -138,7 +138,7 @@ msgid "Order"
 msgstr "Ordenar"
 
 msgctxt "#31028"
-msgid "Amber Settings"
+msgid "Zoyinc Settings"
 msgstr "Amber"
 
 msgctxt "#31029"
