--- a/language/resource.language.sr_rs/strings.po
+++ b/language/resource.language.sr_rs/strings.po
@@ -138,7 +138,7 @@ msgid "Order"
 msgstr "Редослед"
 
 msgctxt "#31028"
-msgid "Amber Settings"
+msgid "Zoyinc Settings"
 msgstr ""
 
 msgctxt "#31029"
