--- a/language/resource.language.vi_vn/strings.po
+++ b/language/resource.language.vi_vn/strings.po
@@ -138,7 +138,7 @@ msgid "Order"
 msgstr "Sắp xếp"
 
 msgctxt "#31028"
-msgid "Amber Settings"
+msgid "Zoyinc Settings"
 msgstr ""
 
 msgctxt "#31029"
